--- a/content/ja/posts/2024-09.md
+++ b/content/ja/posts/2024-09.md
@@ -1,12 +1,12 @@
 ---
-title: "9月のTokyo Indies～東京ゲームショウ版！"
+title: "9月のTokyo Indies～東京ゲームショウ版※第4水曜日です！"
 date: 2024-08-22T00:00:00+09:00
 draft: false
 ---
 
 次回のTokyo Indiesは東京ゲームショウに合わせて**9月25日**開催となります。
 
-※いつもと違って**第4の水曜日**になるので、お間違えの内容に！
+※いつもと違って**第4水曜日**になるので、お間違えの内容に！
 
 東京ゲームショウの前日に行われるTokyo Indiesで一足早く東京のインディーゲームを楽しみましょう！🎉
 
