Add date title for September

--- a/content/en/posts/2024-09.md
+++ b/content/en/posts/2024-09.md
@@ -1,5 +1,5 @@
 ---
-title: "September Tokyo Indies: TGS Edition"
+title: "September Tokyo Indies: TGS Edition *4th Wednesday of the month!"
 date: 2024-08-22T00:00:00+09:00
 draft: false
 ---
