--- a/content/ja/posts/2024-09.md
+++ b/content/ja/posts/2024-09.md
@@ -6,7 +6,7 @@ draft: false
 
 次回のTokyo Indiesは東京ゲームショウに合わせて**9月25日**開催となります。
 
-※いつもと違って**第4水曜日**になるので、お間違えの内容に！
+※いつもと違って**第4水曜日**になるので、お間違えのないように！
 
 東京ゲームショウの前日に行われるTokyo Indiesで一足早く東京のインディーゲームを楽しみましょう！🎉
 
