Attempt to get opengraph images working
It seems that opengraph doesn't use "featured_image", it uses the
"images" array. There's some mechanism which will have it fall back to
use images if you have page bundles, but it's not really clear how that
works.

--- a/content/en/posts/2025-02.md
+++ b/content/en/posts/2025-02.md
@@ -2,6 +2,7 @@
 title: "February Tokyo Indies: Simulation Edition"
 date: 2025-01-21T00:00:00+09:00
 featured_image: "img/202502_simulation.png"
+images: ["img/202502_simulation.png"]
 draft: false
 ---
 
