--- a/content/ja/posts/2025-02.md
+++ b/content/ja/posts/2025-02.md
@@ -2,6 +2,7 @@
 title: "2月のTokyo Indies〜シミュレーションゲーム特集"
 date: 2025-01-21T00:00:00+09:00
 featured_image: "img/202502_simulation.png"
+images: ["img/202502_simulation.png"]
 draft: false
 ---
 
