--- a/content/ja/posts/2025-07.md
+++ b/content/ja/posts/2025-07.md
@@ -1,8 +1,8 @@
 ---
 title: "7月のTokyo Indies・Bitsummit募集"
 date: 2025-06-19T00:00:00+09:00
-featured_image: "img/202507_bitsummit.jpg"
-images: ["img/202507_bitsummit.jpg"]
+featured_image: "img/202507_bitsummit.png"
+images: ["img/202507_bitsummit.png"]
 draft: false
 ---
 
