--- a/content/ja/posts/2025-10.md
+++ b/content/ja/posts/2025-10.md
@@ -1,5 +1,5 @@
 ---
-title: "6月のTokyo Indies〜ノベルゲーム・ホラー特集"
+title: "10月のTokyo Indies〜ホラー特集"
 date: 2025-09-27T18:00:00+09:00
 featured_image: "img/202510_horror.png"
 draft: false
