Add retro night

--- a/content/ja/posts/2026-03.md
+++ b/content/ja/posts/2026-03.md
@@ -7,3 +7,5 @@ draft: false
 次のTokyo Indiesは3月18日開催です。
 
 プレゼンを募集しています。詳細については[プレゼン申込みエージ](/present)をご確認ください。
+
+また、4月のイベントは「レトロ特集」となります。ドット絵やローポリといった低解像度グラフィックや昔の実機で動くゲームはもちろん、「レトロ」らしさがあればぜひお申し込みください。
