--- a/content/en/posts/2026-03.md
+++ b/content/en/posts/2026-03.md
@@ -7,3 +7,5 @@ draft: false
 The next Tokyo Indies will be held on March 18.
 
 We're accepting presentations on the [presentation page](/en/present).
+
+Also, for April we'll be doing a Retro Theme night. If your game features pixel art, low-poly models, runs on old hardware, or is otherwise retro, please apply!
